# Yandex-Black

./: .gitignore  CMakeLists.txt  README.md
W1_UNDEFINED_BEHAVIOR/: CMakeLists.txt  SetAlarm.cpp  for_clang.cpp  max_int.cpp  planets.cpp  point_mesh.cpp
W2_PROTOBUF/: CMakeLists.txt  address.proto  main.cpp  person.proto  reader.cpp  simple_in_cpp.cpp  writer.cpp
W2_PROTOBUF/address-book/: CMakeLists.txt  main.cpp  person.proto
W3_STORING_IN_MEMORY/: CMakeLists.txt
W3_STORING_IN_MEMORY/alignment/: CMakeLists.txt  alignment.cpp  alignment2.cpp  alignment3.cpp  reinterpret_cast_ex.cpp  test_alignment_bench.cpp
W3_STORING_IN_MEMORY/virtual_functions/: CMakeLists.txt  Dog.cpp
W4_CUSTOM_VECTOR/: CMakeLists.txt  placement_new.cpp
